# Projects

./: .gitignore
agi/: baby_general_learner.py  test.py  test_bgl.py
agi/bgl_class_demo/: index.json  memory.jsonl  meta.json
agi/bgl_demo_store/: index.json  memory.jsonl  meta.json
agi/bgl_qa_demo/: index.json  memory.jsonl  meta.json
agi/test-store/: index.json  memory.jsonl  meta.json
ai/: bot.py
dev-rpg/src/: main.py
diary-generator/: index.html  index.html.bak  test.json
game-of-life/: index.html  manifest.json  script.js  style.css  sw.js
games/snake/curses/: CMakeLists.txt
games/snake/curses/tests/: CMakeLists.txt  test_game.cpp
games/snake/web/: index.html  manifest.json  script.js  styles.css
installer/: install.sh
learning/artificial-intelligence/01-search/: .game_history  main.py  maze.py  minimax.py  structures.py  tic-tac-toe.py
learning/llms/: data.json  rnn_model.npz  rnn_model.py  rnn_model_word.py  rnn_model_word2.py  test_model.py
misc/: utils.hpp
nova-shell/: Makefile  docs.md
nova-shell/script-tests/: test-01.nov  test-02.nov
nova-shell/src/: main.cpp
nova-shell/unit-tests/: lexer_tests.cpp  main.cpp
pain/: README.md  hello.pain  pain.py
pdf-to-text/: extractor.py  run.sh
pong-web/: game.js  index.html  style.css
server/: server.sh
termux-backup/: backup.sh  exclude.txt  test.sh
vertex-cli/: Makefile  merge.cpp  vxc.cpp
vertex-cli/srcs/: vxc.cpp
wanikami/: index.html  script.js  style.css
wanikami/.old/: index.html  style.css  test.py
wrappers/: apt.sh  builtins.sh  edit_shellConfig.sh
(+82 files in other folders)
